sealed interface